k8s-manifests/Componentes_core/kubernetes/registry/registry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: cima-registry
  labels:
    app: registry
spec:
  ports:
  - port: 5000
  selector:
    app: registry
